--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.16.0"
-  }
+  },
+  "proxy" : "https://good-cyan-hippo-tutu.cyclic.app"
 }
